chore: update docs

--- a/api/getting-started.mdx
+++ b/api/getting-started.mdx
@@ -3,36 +3,124 @@ title: "Getting Started"
 description: "Get started with the Marble API."
 ---
 
-## Trying it out
+## Quick Start
 
-Throughout this documentation, we use an example workspace ID: `cm6ytuq9x0000i803v0isidst`. You can use this ID to make live API requests and see real responses without needing an account.
-
-<Tip>
-  Try it now! Copy and paste this command into your terminal to fetch posts from our example workspace:
-</Tip>
+Make your first API request in seconds! Copy and paste this command into your terminal:
 
 ```bash
-curl https://api.marblecms.com/v1/cm6ytuq9x0000i803v0isidst/posts
+curl -H "Authorization: YOUR_API_KEY" https://api.marblecms.com/v1/posts
 ```
 
-<Note>
-  The example workspace (`cm6ytuq9x0000i803v0isidst`) does not require
-  authentication. When you are ready to use your own workspace, you will need to
-  use your workspace key in the URL path.
-</Note>
+<Tip>Replace `YOUR_API_KEY` with an API key from your Marble dashboard.</Tip>
+
+## Creating an API Key
+
+<Steps>
+<Step title="Open your workspace settings">
+  Navigate to your workspace dashboard and click **Settings** in the sidebar.
+</Step>
+
+<Step title="Go to API Keys">Click on **API Keys** in the settings menu.</Step>
+
+<Step title="Create a new key">
+  Click **Create API Key**, give it a descriptive name (e.g., "Production
+  Website"), and select the appropriate permissions.
+</Step>
+
+<Step title="Copy your key">
+  Your API key will only be shown once. Copy it and store it securely.
+</Step>
+</Steps>
+
+<Warning>
+  API keys are sensitive credentials. Never commit them to version control or
+  expose them in client-side code.
+</Warning>
 
 ## Authentication
 
-When you're ready to use your own workspace, Marble authenticates your API requests using your workspace key in the URL path.
+Include your API key in the `Authorization` header:
+
+<Tabs>
+<Tab title="cURL">
+```bash
+curl -H "Authorization: YOUR_API_KEY" https://api.marblecms.com/v1/posts
+```
+</Tab>
+
+<Tab title="JavaScript">
+```javascript
+const response = await fetch("https://api.marblecms.com/v1/posts", {
+  headers: {
+    Authorization: "YOUR_API_KEY",
+  },
+});
+const data = await response.json();
+console.log(data);
+```
+</Tab>
+
+<Tab title="Python">
+```python
+import requests
+
+response = requests.get(
+"https://api.marblecms.com/v1/posts",
+headers={"Authorization": "YOUR_API_KEY"}
+)
+print(response.json())
+
+````
+</Tab>
+</Tabs>
+
+Alternatively, use the `key` query parameter:
 
 ```bash
-curl "https://api.marblecms.com/v1/YOUR_WORKSPACE_KEY/posts"
-```
+curl "https://api.marblecms.com/v1/posts?key=YOUR_API_KEY"
+````
 
-<Info>
-  Replace `YOUR_WORKSPACE_KEY` with your actual workspace key found in your Marble dashboard under **Settings > General**.
-</Info>
+<Note>
+  The `Authorization` header method is recommended for security. Query
+  parameters may appear in server logs.
+</Note>
 
-<Warning>
-  Your workspace key carries many privileges, so be sure to keep it secure! Do not share your workspace key in publicly accessible areas such as GitHub, client-side code, and so forth.
-</Warning>
+## Available Endpoints
+
+<CardGroup cols={2}>
+<Card title="Posts" icon="file-text" href="/api/endpoint/posts">
+  Retrieve all published posts with filtering and pagination.
+</Card>
+
+<Card title="Single Post" icon="file" href="/api/endpoint/post">
+  Get a specific post by slug or ID.
+</Card>
+
+<Card title="Categories" icon="folder" href="/api/endpoint/categories">
+  List all content categories.
+</Card>
+
+<Card title="Tags" icon="tag" href="/api/endpoint/tags">
+  Browse all content tags.
+</Card>
+
+<Card title="Authors" icon="users" href="/api/endpoint/authors">
+  Get author information.
+</Card>
+</CardGroup>
+
+## Next Steps
+
+<CardGroup>
+<Card title="Pagination" icon="book-open" href="/api/pagination">
+  Learn how to paginate through large result sets.
+</Card>
+
+<Card title="Rate Limits" icon="gauge" href="/api/rate-limits">
+  Understand API rate limiting and best practices.
+</Card>
+
+<Card title="TypeScript Types" icon="code" href="/api/types">
+  Use our TypeScript definitions for type-safe development.
+</Card>
+</CardGroup>
