--- a/guides/integrations/nextjs.mdx
+++ b/guides/integrations/nextjs.mdx
@@ -12,19 +12,17 @@ If you want to get started quickly, you can clone our [Next.js blog template](ht
 First, you'll need to add your Marble API URL and Workspace Key to your environment variables. Create a `.env.local` file in the root of your Next.js project and add the following:
 
 ```bash .env.local
-MARBLE_API_URL=https://api.marblecms.com/v1
-MARBLE_WORKSPACE_KEY=your_workspace_key_here
+MARBLE_API_KEY=your_api_key_here
 ```
 
 <Warning>
-  **Important:** Never expose your `MARBLE_WORKSPACE_KEY` in client-side code.
-  Your environment variables should only be accessed on the server during the
-  build process. For client-side updates, use [webhooks](/guides/webhooks) to
-  trigger rebuilds.
+  While public API keys are currently read-only, they should be used on the
+  server-side whenever possible to prevent your [rate limits](/api/rate-limits)
+  from being exhausted by others.
 </Warning>
 
 <Tip>
-You can find your Workspace Key in your Marble dashboard under the settings for your workspace.
+You can find your API Key in your Marble dashboard under **Settings > API Keys**.
 </Tip>
 </Step>
 
@@ -48,12 +46,13 @@ import type {
   MarbleTagListResponse,
 } from "@/types/marble";
 
-const url = process.env.MARBLE_API_URL;
-const key = process.env.MARBLE_WORKSPACE_KEY;
+const key = process.env.MARBLE_API_KEY;
 
 export async function getPosts() {
   try {
-    const raw = await fetch(`${url}/${key}/posts`);
+    const raw = await fetch("https://api.marblecms.com/v1/posts", {
+      headers: { Authorization: key! },
+    });
     const data: MarblePostListResponse = await raw.json();
     return data;
   } catch (error) {
@@ -63,7 +62,9 @@ export async function getPosts() {
 
 export async function getTags() {
   try {
-    const raw = await fetch(`${url}/${key}/tags`);
+    const raw = await fetch("https://api.marblecms.com/v1/tags", {
+      headers: { Authorization: key },
+    });
     const data: MarbleTagListResponse = await raw.json();
     return data;
   } catch (error) {
@@ -73,7 +74,9 @@ export async function getTags() {
 
 export async function getSinglePost(slug: string) {
   try {
-    const raw = await fetch(`${url}/${key}/posts/${slug}`);
+    const raw = await fetch(`https://api.marblecms.com/v1/posts/${slug}`, {
+      headers: { Authorization: key },
+    });
     const data: MarblePostResponse = await raw.json();
     return data;
   } catch (error) {
@@ -83,7 +86,9 @@ export async function getSinglePost(slug: string) {
 
 export async function getCategories() {
   try {
-    const raw = await fetch(`${url}/${key}/categories`);
+    const raw = await fetch("https://api.marblecms.com/v1/categories", {
+      headers: { Authorization: key },
+    });
     const data: MarbleCategoryListResponse = await raw.json();
     return data;
   } catch (error) {
@@ -93,7 +98,9 @@ export async function getCategories() {
 
 export async function getAuthors() {
   try {
-    const raw = await fetch(`${url}/${key}/authors`);
+    const raw = await fetch("https://api.marblecms.com/v1/authors", {
+      headers: { Authorization: key },
+    });
     const data: MarbleAuthorListResponse = await raw.json();
     return data;
   } catch (error) {
