--- a/api/introduction.mdx
+++ b/api/introduction.mdx
@@ -32,9 +32,11 @@ curl "https://api.marblecms.com/v1/posts?key=YOUR_API_KEY"
 ```
 
 <Warning>
-  Your API key carries many privileges, so be sure to keep it secure! Do not
-  share your API key in publicly accessible areas such as GitHub, client-side
-  code, and so forth.
+  While public API keys currently only provide read-only access, they should
+  still be handled with care. Exposing your key in client-side code allows
+  anyone to make requests on your behalf, which can lead to your [rate
+  limits](/api/rate-limits) being exhausted. We recommend using keys on the
+  server-side whenever possible.
 </Warning>
 
 <Tip>
