--- a/guides/integrations/astro.mdx
+++ b/guides/integrations/astro.mdx
@@ -12,18 +12,17 @@ Astro's **Content Collections** are the best way to manage content in your proje
 First, add your Marble API URL and Workspace Key to your environment variables. Create a `.env` file in the root of your Astro project and add the following:
 
 ```bash .env
-MARBLE_API_URL="https://api.marblecms.com/v1"
-MARBLE_WORKSPACE_KEY="your_workspace_key_here"
+MARBLE_API_KEY="your_api_key_here"
 ```
 
 <Warning>
-  **Important:** Never expose your `MARBLE_WORKSPACE_KEY` in client-side code.
-  Your environment variables are loaded into the server context during the build
-  process and should not be shared with the client.
+  While public API keys are currently read-only, they should be used on the
+  server-side whenever possible to prevent your [rate limits](/api/rate-limits)
+  from being exhausted by others.
 </Warning>
 
 <Tip>
-You can find your Workspace Key in your Marble dashboard under your workspace settings.
+You can find your API Key in your Marble dashboard under **Settings > API Keys**.
 </Tip>
 </Step>
 
@@ -41,8 +40,7 @@ This configuration defines a `posts` collection, and includes a loader function 
 import { z, defineCollection } from "astro:content";
 import type { MarblePostList } from "./types/marble";
 
-const key = import.meta.env.MARBLE_WORKSPACE_KEY;
-const url = import.meta.env.MARBLE_API_URL;
+const key = import.meta.env.MARBLE_API_KEY;
 
 const PostSchema = z.object({
   id: z.string(),
@@ -92,7 +90,11 @@ type Post = z.infer<typeof PostSchema>;
 const postsCollection = defineCollection({
   schema: PostSchema,
   loader: async () => {
-    const response = await fetch(`${url}/${key}/posts`);
+    const response = await fetch("https://api.marblecms.com/v1/posts", {
+      headers: {
+        Authorization: key,
+      },
+    });
     const { posts }: MarblePostList = await response.json();
     return posts.map((post) => ({
       ...post,
