fix: broken code group

--- a/guides/sdk.mdx
+++ b/guides/sdk.mdx
@@ -1,9 +1,9 @@
 ---
 title: "SDK"
-description: "Official Marble SDKs for TypeScript and more."
+description: "Official Marble SDK for TypeScript."
 ---
 
-Use our official SDKs for a streamlined development experience with full type safety and convenient helper methods.
+Use our official SDK for a streamlined development experience with full type safety and convenient helper methods.
 
 <Info>
   We're actively developing official SDKs. In the meantime, you can use the
@@ -16,9 +16,22 @@ Use our official SDKs for a streamlined development experience with full type sa
 While we work on a full SDK, you can use our published TypeScript types for type-safe development:
 
 <CodeGroup>
-  ```bash npm npm install @usemarble/core ``` ```bash yarn yarn add
-  @usemarble/core ``` ```bash pnpm pnpm add @usemarble/core ``` ```bash bun bun
-  add @usemarble/core ```
+  ```bash npm
+  npm install @usemarble/core
+  ```
+
+```bash yarn
+yarn add @usemarble/core
+```
+
+```bash pnpm
+pnpm add @usemarble/core
+```
+
+```bash bun
+bun add @usemarble/core
+```
+
 </CodeGroup>
 
 ```typescript
