--- a/api/introduction.mdx
+++ b/api/introduction.mdx
@@ -22,7 +22,7 @@ Marble authenticates API requests using API keys. You can create and manage API 
 Include your API key in the `Authorization` header of every request:
 
 ```bash
-curl -H "Authorization: YOUR_API_KEY" https://api.marblecms.com/v1/posts
+curl -H "Authorization: Bearer YOUR_API_KEY" https://api.marblecms.com/v1/posts
 ```
 
 Alternatively, you can pass the API key as a query parameter:
