--- a/api/rate-limits.mdx
+++ b/api/rate-limits.mdx
@@ -62,7 +62,7 @@ If you exceed the allowed number of requests in the current window, the API retu
 <RequestExample>
 
 ```bash cURL
-curl -i -H "Authorization: YOUR_API_KEY" "https://api.marblecms.com/v1/posts"
+curl -i -H "Authorization: Bearer YOUR_API_KEY" "https://api.marblecms.com/v1/posts"
 ```
 
 </RequestExample>
