--- a/guides/integrations/nextjs.mdx
+++ b/guides/integrations/nextjs.mdx
@@ -51,7 +51,7 @@ const key = process.env.MARBLE_API_KEY;
 export async function getPosts() {
   try {
     const raw = await fetch("https://api.marblecms.com/v1/posts", {
-      headers: { Authorization: key! },
+      headers: { Authorization: `Bearer ${key}` },
     });
     const data: MarblePostListResponse = await raw.json();
     return data;
@@ -63,7 +63,7 @@ export async function getPosts() {
 export async function getTags() {
   try {
     const raw = await fetch("https://api.marblecms.com/v1/tags", {
-      headers: { Authorization: key },
+      headers: { Authorization: `Bearer ${key },
     });
     const data: MarbleTagListResponse = await raw.json();
     return data;
@@ -75,7 +75,7 @@ export async function getTags() {
 export async function getSinglePost(slug: string) {
   try {
     const raw = await fetch(`https://api.marblecms.com/v1/posts/${slug}`, {
-      headers: { Authorization: key },
+      headers: { Authorization: `Bearer ${key },
     });
     const data: MarblePostResponse = await raw.json();
     return data;
@@ -87,7 +87,7 @@ export async function getSinglePost(slug: string) {
 export async function getCategories() {
   try {
     const raw = await fetch("https://api.marblecms.com/v1/categories", {
-      headers: { Authorization: key },
+      headers: { Authorization: `Bearer ${key },
     });
     const data: MarbleCategoryListResponse = await raw.json();
     return data;
@@ -99,7 +99,7 @@ export async function getCategories() {
 export async function getAuthors() {
   try {
     const raw = await fetch("https://api.marblecms.com/v1/authors", {
-      headers: { Authorization: key },
+      headers: { Authorization: `Bearer ${key },
     });
     const data: MarbleAuthorListResponse = await raw.json();
     return data;
