--- a/api/endpoint/category.mdx
+++ b/api/endpoint/category.mdx
@@ -6,13 +6,19 @@ api: "GET /v1/categories/:identifier"
 
 <RequestExample>
 ```bash cURL
-curl -H "Authorization: YOUR_API_KEY" \
+curl -H "Authorization: Bearer YOUR_API_KEY" \
   "https://api.marblecms.com/v1/categories/tutorials"
 ```
 
-```bash cURL (with posts)
-curl -H "Authorization: YOUR_API_KEY" \
-  "https://api.marblecms.com/v1/categories/tutorials?include=posts"
+```javascript JavaScript
+const response = await fetch(
+  "https://api.marblecms.com/v1/categories/tutorials",
+  {
+    headers: { Authorization: "Bearer YOUR_API_KEY" },
+  }
+);
+const data = await response.json();
+console.log(data);
 ```
 
 </RequestExample>
@@ -50,6 +56,12 @@ curl -H "Authorization: YOUR_API_KEY" \
 }
 ```
 </ResponseExample>
+
+## Authorizations
+
+<ParamField header="Authorization" type="string" required>
+  Your Marble API key. Include it in the header as: `Bearer YOUR_API_KEY`
+</ParamField>
 
 ### Path Parameters
 
