--- a/api/endpoint/post.mdx
+++ b/api/endpoint/post.mdx
@@ -7,14 +7,9 @@ api: "GET /v1/posts/:identifier"
 Fetch a specific post using either its unique slug or ID. Both identifiers work interchangeably.
 
 <RequestExample>
-```bash cURL (by slug)
-curl -H "Authorization: YOUR_API_KEY" \
+```bash cURL
+curl -H "Authorization: Bearer YOUR_API_KEY" \
   "https://api.marblecms.com/v1/posts/introducing-marblecms"
-```
-
-```bash cURL (by ID)
-curl -H "Authorization: YOUR_API_KEY" \
-  "https://api.marblecms.com/v1/posts/clt92n38p000108l48zkj41an"
 ```
 
 ```javascript JavaScript
@@ -22,22 +17,10 @@ const identifier = "introducing-marblecms"; // or use the post ID
 
 const response = await fetch(
   `https://api.marblecms.com/v1/posts/${identifier}`,
-  { headers: { Authorization: "YOUR_API_KEY" } }
+  { headers: { Authorization: "Bearer YOUR_API_KEY" } }
 );
 const data = await response.json();
 console.log(data.post);
-```
-
-```python Python
-import requests
-
-identifier = "introducing-marblecms"  # or use the post ID
-
-response = requests.get(
-    f"https://api.marblecms.com/v1/posts/{identifier}",
-    headers={"Authorization": "YOUR_API_KEY"}
-)
-print(response.json())
 ```
 
 </RequestExample>
@@ -88,6 +71,12 @@ print(response.json())
 ```
 </ResponseExample>
 
+## Authorizations
+
+<ParamField header="Authorization" type="string" required>
+  Your Marble API key. Include it in the header as: `Bearer YOUR_API_KEY`
+</ParamField>
+
 ## Path Parameters
 
 <ParamField path="identifier" type="string" required>
@@ -99,9 +88,8 @@ print(response.json())
 ## Query Parameters
 
 <ParamField query="format" type="string">
-  Format of the `content` field in the response. | Value | Description |
-  |-------|-------------| | _(default)_ | HTML content as stored | | `markdown`
-  | Content converted to Markdown | ```bash curl -H "Authorization:
+  Format of the `content` field in the response. | Value | Description | |
+  Content converted to Markdown | ```bash curl -H "Authorization: Bearer
   YOUR_API_KEY" \
   "https://api.marblecms.com/v1/posts/introducing-marblecms?format=markdown" ```
 </ParamField>
