--- a/api/endpoint/posts.mdx
+++ b/api/endpoint/posts.mdx
@@ -6,25 +6,15 @@ api: "GET /v1/posts"
 
 <RequestExample>
 ```bash cURL
-curl -H "Authorization: YOUR_API_KEY" "https://api.marblecms.com/v1/posts"
+curl -H "Authorization: Bearer YOUR_API_KEY" "https://api.marblecms.com/v1/posts"
 ```
 
 ```javascript JavaScript
 const response = await fetch("https://api.marblecms.com/v1/posts", {
-  headers: { Authorization: "YOUR_API_KEY" },
+  headers: { Authorization: "Bearer YOUR_API_KEY" },
 });
 const data = await response.json();
 console.log(data.posts);
-```
-
-```python Python
-import requests
-
-response = requests.get(
-    "https://api.marblecms.com/v1/posts",
-    headers={"Authorization": "YOUR_API_KEY"}
-)
-print(response.json())
 ```
 
 </RequestExample>
@@ -84,6 +74,12 @@ print(response.json())
 }
 ```
 </ResponseExample>
+
+## Authorizations
+
+<ParamField header="Authorization" type="string" required>
+  Your Marble API key. Include it in the header as: `Bearer YOUR_API_KEY`
+</ParamField>
 
 ## Query Parameters
 
@@ -146,25 +142,25 @@ Use query parameters to paginate, sort, and filter results.
 <AccordionGroup>
 <Accordion title="Filter by category">
 ```bash
-curl -H "Authorization: YOUR_API_KEY" \
+curl -H "Authorization: Bearer YOUR_API_KEY" \
   "https://api.marblecms.com/v1/posts?categories=tutorials"
 ```
 </Accordion>
 
 <Accordion title="Multiple filters">
-  ```bash curl -H "Authorization: YOUR_API_KEY" \
+  ```bash curl -H "Authorization: Bearer YOUR_API_KEY" \
   "https://api.marblecms.com/v1/posts?categories=tutorials&tags=beginner&limit=5"
   ```
 </Accordion>
 
 <Accordion title="Get all posts as Markdown">
-  ```bash curl -H "Authorization: YOUR_API_KEY" \
+  ```bash curl -H "Authorization: Bearer YOUR_API_KEY" \
   "https://api.marblecms.com/v1/posts?limit=all&format=markdown" ```
 </Accordion>
 
 <Accordion title="Search posts">
 ```bash
-curl -H "Authorization: YOUR_API_KEY" \
+curl -H "Authorization: Bearer YOUR_API_KEY" \
   "https://api.marblecms.com/v1/posts?query=getting%20started"
 ```
 </Accordion>
