--- a/api/getting-started.mdx
+++ b/api/getting-started.mdx
@@ -8,7 +8,7 @@ description: "Get started with the Marble API."
 Make your first API request in seconds! Copy and paste this command into your terminal:
 
 ```bash
-curl -H "Authorization: YOUR_API_KEY" https://api.marblecms.com/v1/posts
+curl -H "Authorization: Bearer YOUR_API_KEY" https://api.marblecms.com/v1/posts
 ```
 
 <Tip>Replace `YOUR_API_KEY` with an API key from your Marble dashboard.</Tip>
@@ -46,7 +46,7 @@ Include your API key in the `Authorization` header:
 <Tabs>
 <Tab title="cURL">
 ```bash
-curl -H "Authorization: YOUR_API_KEY" https://api.marblecms.com/v1/posts
+curl -H "Authorization: Bearer YOUR_API_KEY" https://api.marblecms.com/v1/posts
 ```
 </Tab>
 
@@ -54,7 +54,7 @@ curl -H "Authorization: YOUR_API_KEY" https://api.marblecms.com/v1/posts
 ```javascript
 const response = await fetch("https://api.marblecms.com/v1/posts", {
   headers: {
-    Authorization: "YOUR_API_KEY",
+    Authorization: "Bearer YOUR_API_KEY",
   },
 });
 const data = await response.json();
@@ -62,17 +62,6 @@ console.log(data);
 ```
 </Tab>
 
-<Tab title="Python">
-```python
-import requests
-
-response = requests.get(
-"https://api.marblecms.com/v1/posts",
-headers={"Authorization": "YOUR_API_KEY"}
-)
-print(response.json())
-
-````
 </Tab>
 </Tabs>
 
@@ -80,7 +69,7 @@ Alternatively, use the `key` query parameter:
 
 ```bash
 curl "https://api.marblecms.com/v1/posts?key=YOUR_API_KEY"
-````
+```
 
 <Note>
   The `Authorization` header method is recommended for security. Query
