--- a/guides/integrations/astro.mdx
+++ b/guides/integrations/astro.mdx
@@ -92,7 +92,7 @@ const postsCollection = defineCollection({
   loader: async () => {
     const response = await fetch("https://api.marblecms.com/v1/posts", {
       headers: {
-        Authorization: key,
+        Authorization: `Bearer ${key}`,
       },
     });
     const { posts }: MarblePostList = await response.json();
