--- a/guides/sdk.mdx
+++ b/guides/sdk.mdx
@@ -45,7 +45,7 @@ import type {
 
 // Use types with fetch
 const response = await fetch("https://api.marblecms.com/v1/posts", {
-  headers: { Authorization: process.env.MARBLE_API_KEY },
+  headers: { Authorization: `Bearer ${process.env.MARBLE_API_KEY}` },
 });
 const data: { posts: MarblePost[]; pagination: MarblePagination } =
   await response.json();
