chore: improve readability

--- a/api/endpoint/category.mdx
+++ b/api/endpoint/category.mdx
@@ -66,7 +66,7 @@ console.log(data);
 ### Path Parameters
 
 <ParamField path="identifier" type="string" required>
-  The category slug (e.g., `tutorials`) or ID.
+  The category ID or slug.
 </ParamField>
 
 ### Query Parameters
