--- a/api/endpoint/posts.mdx
+++ b/api/endpoint/posts.mdx
@@ -133,8 +133,8 @@ Use query parameters to paginate, sort, and filter results.
 ### Content Format
 
 <ParamField query="format" type="string">
-  Format of the `content` field in the response. - **Default:** HTML -
-  **`markdown`:** Returns content converted to Markdown ``` ?format=markdown ```
+  Format of the `content` field in the response. - **Default:** HTML content as
+  stored - **`markdown`:** Content converted to Markdown
 </ParamField>
 
 ## Examples
