--- a/api/endpoint/author.mdx
+++ b/api/endpoint/author.mdx
@@ -68,7 +68,7 @@ console.log(data);
 ### Path Parameters
 
 <ParamField path="identifier" type="string" required>
-  The author slug (e.g., `john-doe`) or ID.
+  The author ID or slug.
 </ParamField>
 
 ### Query Parameters
