--- a/api/endpoint/tag.mdx
+++ b/api/endpoint/tag.mdx
@@ -63,7 +63,7 @@ console.log(data);
 ### Path Parameters
 
 <ParamField path="identifier" type="string" required>
-  The tag slug (e.g., `product`) or ID.
+  The tag ID or slug.
 </ParamField>
 
 ### Query Parameters
